--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://localhost:9000/
 sonar.login=squ_1285b37cd202643af862a62667b4edb25a266d3d
+sonar.exclusions=**/node_modules/**
