--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,9 +18,9 @@ services:
     ports:
       - "9000:9000"
     environment:
-      SONARQUBE_JDBC_URL: jdbc:postgresql://db:5432/sonar
-      SONARQUBE_JDBC_USERNAME: sonar
-      SONARQUBE_JDBC_PASSWORD: sonar
+      SONARQUBE_JDBC_URL: jdbc:postgresql://localhost:5432/booksecondbind
+      SONARQUBE_JDBC_USERNAME: sonaradmin
+      SONARQUBE_JDBC_PASSWORD: sonaradmin
     depends_on:
       - db
 
@@ -28,9 +28,9 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
-      POSTGRES_DB: sonar
+      POSTGRES_USER: sonaradmin
+      POSTGRES_PASSWORD: sonaradmin
+      POSTGRES_DB: booksecondbind
 
   nexus:
     image: sonatype/nexus3:latest
