--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3"
-
 services:
   jenkins:
-    image: jenkins/jenkins:lts
+    build: .
     container_name: jenkins
     ports:
       - "8080:8080"
