--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "mkdir -p dist && npm install"
+    "build": "mkdir -p dist && npm install && zip -r dist/my-app.zip ."
   },
   "author": "Ranish Shrestha",
   "license": "ISC",
