--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM jenkins/jenkins:lts
 USER root
-RUN apt-get update && apt-get install -y zip
+RUN apt-get update \
+  && apt-get install nginx
 USER jenkins
