--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "mkdir -p dist && npm install && zip -r dist/my-app.zip ."
+    "start": "node server.js"
   },
   "publishConfig": {
     "registry": "http://10.0.0.247:8081/repository/npm-book-repo/"
