--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "9000:9000"
     environment:
-      SONARQUBE_JDBC_URL: jdbc:postgresql://db:5432/booksecondbind
+      SONARQUBE_JDBC_URL: jdbc:postgresql://db:5432/books
       SONARQUBE_JDBC_USERNAME: sonaradmin
       SONARQUBE_JDBC_PASSWORD: sonaradmin
     depends_on:
@@ -30,7 +30,7 @@ services:
     environment:
       POSTGRES_USER: sonaradmin
       POSTGRES_PASSWORD: sonaradmin
-      POSTGRES_DB: booksecondbind
+      POSTGRES_DB: books
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
