--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "webpack --config webpack.config.js",
-    "package": "mkdir publish && zip -r publish/my-app.zip dist/*"
+    "package": "mkdir -p publish && zip -r publish/my-app.zip dist/*"
   },
   "publishConfig": {
     "registry": "http://10.0.0.247:8081/repository/npm-book-repo/"
