delete docker file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   jenkins:
-    build: .
+    build: jenkins/jenkins:lts
     container_name: jenkins
     ports:
       - "8080:8080"
